--- a/index.html
+++ b/index.html
@@ -1,71 +1,80 @@
+<!-- Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor -->
+<!-- incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam. -->
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Flexbox Challenge</title>
+    <title>Flex CH2</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <div class="main">
-      <div id="intro">
-        <div class="container">
+    <header class="header">
+      <nav class="nav">
+        <ul class="nav--list">
+          <li class="nav--items">home</li>
+          <li class="nav--items">about</li>
+          <li class="nav--items">contact</li>
+          <li class="nav--items">sign in</li>
+          <li class="nav--items nav--btn">sign up</li>
+        </ul>
+      </nav>
+    </header>
+    <section>
+      <div class="test">
+        <div class="container row">
           <div class="hero">
             <h1>Responsive layouts don't have to be a struggle</h1>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
-              placerat nunc vel sem lacinia, eu euismod leo ullamcorper. Aliquam
-              pretium sollicitudin massa nec cursus.
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam.
             </p>
-            <a href="#">I want to learn</a>
+            <a href="#">i want to learn</a>
+          </div>
+          <div class="img">
+            <img class="hero__img" src="//unsplash.it/300" alt="" />
           </div>
         </div>
       </div>
-      <div class="row">
-        <!-- <div id="test"> -->
-        <div class="col">
+    </section>
+    <section>
+      <div class="container row">
+        <div class="sec2--left">
+          <h2>Quality designs made custom, on demand, just for you</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+            ad minim veniam.
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+            ad minim veniam.
+          </p>
+        </div>
+        <div class="sec2--right">
           <h2>Cheap</h2>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
-            placerat nunc vel sem lacinia, eu euismod leo ullamcorper. Aliquam
-            pretium sollicitudin massa nec cursus.
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+            ad minim veniam.
           </p>
-        </div>
-        <div class="col">
           <h2>Quick</h2>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
-            placerat nunc vel sem lacinia, eu euismod leo ullamcorper. Aliquam
-            pretium sollicitudin massa nec cursus.
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+            ad minim veniam.
           </p>
-        </div>
-        <div class="col">
           <h2>Quality</h2>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
-            placerat nunc vel sem lacinia, eu euismod leo ullamcorper. Aliquam
-            pretium sollicitudin massa nec cursus.
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+            ad minim veniam.
           </p>
         </div>
       </div>
-      <div class="row2">
-        <div class="col">
-          <h2>Cheap</h2>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
-            placerat nunc vel sem lacinia, eu euismod leo ullamcorper. Aliquam
-            pretium sollicitudin massa nec cursus.
-          </p>
-        </div>
-        <div class="col">
-          <h2>Quick</h2>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
-            placerat nunc vel sem lacinia, eu euismod leo ullamcorper. Aliquam
-            pretium sollicitudin massa nec cursus.
-          </p>
-        </div>
-      </div>
-    </div>
+    </section>
   </body>
 </html>
