--- a/index.html
+++ b/index.html
@@ -7,7 +7,26 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    s
+    <section class="container secFirst">
+      <h2>Lorem ipsum sit</h2>
+      <h1>Responsive layouts don't have to be a struggle</h1>
+    </section>
+    <section class="container secSecond">
+      <h3>Quality Designs</h3>
+      <div class="row">
+        <p class="col">
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nulla
+          recusandae illo doloribus reiciendis, minima vitae, quaerat libero ut
+          officiis commodi amet consequatur quisquam modi? Nulla voluptatem in
+          harum soluta quam.
+        </p>
+        <p class="col">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro ad
+          delectus, autem eos sapiente officiis recusandae at? Repellendus,
+          blanditiis autem! At, natus nam. Excepturi, eaque?
+        </p>
+      </div>
+    </section>
 
     <section class="container secThird">
       <div class="row">
