--- a/index.html
+++ b/index.html
@@ -3,57 +3,63 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CH4</title>
+    <title>Flexbox CH</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <section class="container secFirst">
-      <h2>Lorem ipsum sit</h2>
-      <h1>Responsive layouts don't have to be a struggle</h1>
-    </section>
-    <section class="container secSecond">
-      <h3>Quality Designs</h3>
-      <div class="row">
-        <p class="col">
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nulla
-          recusandae illo doloribus reiciendis, minima vitae, quaerat libero ut
-          officiis commodi amet consequatur quisquam modi? Nulla voluptatem in
-          harum soluta quam.
-        </p>
-        <p class="col">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro ad
-          delectus, autem eos sapiente officiis recusandae at? Repellendus,
-          blanditiis autem! At, natus nam. Excepturi, eaque?
-        </p>
+    <!-- <section class="intro">
+      <p>LOREM IPSUM SIT</p>
+      <h1>Responsive layouts don't<br />have to be a struggle</h1>
+    </section> -->
+
+    <section class="container--white">
+      <div class="container__sec2">
+        <h2 class="dark">Quality Designs</h2>
+        <div class="row">
+          <p class="black">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Dui
+            vivamus arcu felis bibendum ut tristique. Arcu dui vivamus arcu
+            felis. Sociis natoque penatibus et magnis dis.
+          </p>
+          <p class="black">
+            Felis donec et odio pellentesque diam volutpat. Aliquam purus sit
+            amet luctus venenatis. Turpis in eu mi bibendum neque egestas congue
+            quisque egestas. Pellentesque sit amet porttitor eget dolor morbi
+            non.
+          </p>
+        </div>
       </div>
     </section>
 
-    <section class="container secThird">
-      <div class="row">
-        <div class="col">
-          <h3>Made custom for you</h3>
-          <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aperiam
-            saepe aliquam voluptatibus iste aut! Molestias ad pariatur
-            temporibus eaque nam.
+    <section class="container--black">
+      <div class="container__sec3 row">
+        <div>
+          <h2 class="light light--black">Made custom for you</h2>
+          <p class="white light--black">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+            ad minim veniam.
           </p>
         </div>
-        <div class="col">
-          <img src="/images/image-01.jpg" alt="Sunset" />
+        <div>
+          <img src="images/image-01.jpg" alt="An image of a sunset" />
         </div>
       </div>
     </section>
-    <section class="container secFourth">
-      <div class="row">
-        <div class="col">
-          <img src="/images/image-02.jpg" alt="" />
+
+    <section class="container--dark">
+      <div class="container__sec4 row">
+        <div>
+          <img src="images/image-02.jpg" alt="Another image of a sunset" />
         </div>
-        <div class="col">
-          <h3>Created with care</h3>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis
-            id pariatur ea sint ratione nemo nisi dolore nostrum sunt hic ullam
-            quia, odio commodi labore.
+        <div>
+          <h2 class="light light--dark">Created with care</h2>
+          <p class="white light--dark">
+            Felis donec et odio pellentesque diam volutpat. Aliquam purus sit
+            amet luctus venenatis. Turpis in eu mi bibendum neque egestas congue
+            quisque egestas. Pellentesque sit amet porttitor eget dolor morbi
+            non.
           </p>
         </div>
       </div>
