--- a/brimboats/index.html
+++ b/brimboats/index.html
@@ -77,7 +77,7 @@
                 North Atlantic Ocean.
               </span>
             </p>
-          </>
+          </div>
           <div class="flex--colSB">
             <a href="#">Read more</a>
             <a href="#">Contact</a>
